...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@drawable/recipes" />

    <Button
        android:id="@+id/random_do_random_from_internet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="From the web"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextOnP"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <Button
        android:id="@+id/random_do_random"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="From cook book"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextOnP"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/random_go_to_recipe"
...
