<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="Settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"
        />
</menu>
