<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Schedule settings">
        <SwitchPreferenceCompat
            app:key="google calendar"
            app:title="Google calendar events"
            android:summary="Enable creation of google calendar events when creating schedules"
            android:defaultValue="false"/>


    </PreferenceCategory>
    <PreferenceCategory app:title="User settings">
        <Preference
            app:title="Sign out"
            app:key="signOut"
            app:summary="Signs the current user out of the system"/>
    </PreferenceCategory>

</PreferenceScreen>